<resources>
    <string name="app_name">Rectivity</string>
    <string name="action_settings">Settings</string>
    <string name="darkSkyKey"> b192801dd32b4790057b73cec3fa551f</string>
    <string name="breezoMeterKey"> b9023667dc3046d1ad00d71dc2772793</string>
    <string name="googlePlaceKeys"> AIzaSyDy0fndFo8Y2qQQjFS6i9u895eISLxCIs8</string>
    <string name="rectivity">Rectivity</string>
    <string name="textview">TextView</string>
    <string name="running">Button</string>
    <string name="biking">Button</string>
    <string name="swimming">Button</string>
    <string name="profile_image">Profile image</string>
    <string name="name">Name</string>

    <string name="password">Password</string>
    <string name="gender">RadioButton</string>
    <string name="age">TextView</string>
    <string name="height">TextView</string>
    <string name="next">Button</string>
    <string name="weight">Textview</string>
    <string name="Favorite_activity">TextView</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="goal">TextView</string>
    <string name="submit">Button</string>
    <string name="Activity_name">TextView</string>
    <string name="Activity_info">TextView</string>


</resources>
